{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 70,
  "lineage": "ee81bc28-10ae-75c9-4e8f-fa45506b7214",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a7f2b7b9922d4592",
            "domain": "vpc",
            "id": "eipalloc-09cb73b16fa26f11e",
            "instance": "i-0dcc0c4bddc2afb39",
            "network_interface": "eni-0e937f9f6c659d694",
            "private_dns": "ip-10-0-0-173.us-east-2.compute.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-18-190-71-184.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.71.184",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.database"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-026316e916f12c1a1",
            "domain": "vpc",
            "id": "eipalloc-05d532a2a0afff28f",
            "instance": "i-05e602d3e836edd87",
            "network_interface": "eni-0c0bae4b41ec86011",
            "private_dns": "ip-10-0-0-129.us-east-2.compute.internal",
            "private_ip": "10.0.0.129",
            "public_dns": "ec2-18-189-123-27.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.123.27",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:355845799040:instance/i-0dcc0c4bddc2afb39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0dcc0c4bddc2afb39",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "interns_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e937f9f6c659d694",
            "private_dns": "ip-10-0-0-173.us-east-2.compute.internal",
            "private_ip": "10.0.0.173",
            "public_dns": "ec2-18-190-71-184.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.71.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d60ac5efa1d0a45c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dc62f5a8103e39c9",
            "tags": {
              "Name": "interns-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0854b896683921945"
            ]
          },
          "depends_on": [
            "aws_security_group.web",
            "aws_subnet.todo-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c1fa8df71875112",
            "arn": "arn:aws:ec2:us-east-2:355845799040:instance/i-05e602d3e836edd87",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-05e602d3e836edd87",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "interns_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0c0bae4b41ec86011",
            "private_dns": "ip-10-0-0-129.us-east-2.compute.internal",
            "private_ip": "10.0.0.129",
            "public_dns": "ec2-18-189-123-27.us-east-2.compute.amazonaws.com",
            "public_ip": "18.189.123.27",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f2c5fcb9f1348de7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0dc62f5a8103e39c9",
            "tags": {
              "Name": "interns-web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0854b896683921945"
            ]
          },
          "depends_on": [
            "aws_security_group.web",
            "aws_subnet.todo-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "todogw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0979e94efd44b8f1a",
            "owner_id": "355845799040",
            "vpc_id": "vpc-0513cedbd97831f1c"
          },
          "depends_on": [
            "aws_vpc.todovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "todo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0390c5abc7c1d19d8",
            "owner_id": "355845799040",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0979e94efd44b8f1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "vpc_id": "vpc-0513cedbd97831f1c"
          },
          "depends_on": [
            "aws_internet_gateway.todogw",
            "aws_vpc.todovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "todo-subnet-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098ecd8f90c7df7e3",
            "route_table_id": "rtb-0390c5abc7c1d19d8",
            "subnet_id": "subnet-0dc62f5a8103e39c9"
          },
          "depends_on": [
            "aws_route_table.todo-public-subnet",
            "aws_subnet.todo-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:355845799040:security-group/sg-0854b896683921945",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0854b896683921945",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_web",
            "name_prefix": null,
            "owner_id": "355845799040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0513cedbd97831f1c"
          },
          "depends_on": [
            "aws_vpc.todovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "todo-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:355845799040:subnet/subnet-0dc62f5a8103e39c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0dc62f5a8103e39c9",
            "map_public_ip_on_launch": false,
            "owner_id": "355845799040",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0513cedbd97831f1c"
          },
          "depends_on": [
            "aws_vpc.todovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "todovpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:355845799040:vpc/vpc-0513cedbd97831f1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0325f133e3b302783",
            "default_route_table_id": "rtb-055bf124f7f6455e1",
            "default_security_group_id": "sg-084d60a42e4b22187",
            "dhcp_options_id": "dopt-e415dd8f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0513cedbd97831f1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055bf124f7f6455e1",
            "owner_id": "355845799040",
            "tags": {
              "Name": "terraform-todo-vpc"
            }
          }
        }
      ]
    }
  ]
}